--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -21,7 +21,7 @@ jobs:
         env:
           GREETING: OK
       - name: List files
-        run: pwd && ls
+        run: "pwd && ls"
         shell: bash
 
   stage2:
