--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -23,3 +23,9 @@ jobs:
       - name: List files
         run: "pwd && ls"
         shell: bash
+
+  stage2:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
