--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -29,3 +29,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Set Java
+        uses: actions/setup-java@v3
+        with:
+          java-version: '8'
+          distribution: 'temurin'
+
+    - name: Setup Gradle
+      # https://github.com/gradle/gradle-build-action
+      uses: gradle/gradle-build-action@v2
+
+    - name: Execute Gradle build
+      run: ./gradlew build
