--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -41,4 +41,4 @@ jobs:
         uses: gradle/gradle-build-action@v2
 
       - name: Execute Gradle build
-        run: ./gradlew build
+        run: sh ./gradlew build
