--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -46,4 +46,4 @@ jobs:
       - name: Execute Sonar
         run: sh ./gradlew sonar
         env:
-          SONAR_TOKEN: ${{ SONAR_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
